# cranial-modeling

./: README.rst  pyproject.toml  requirements.txt  setup.py
cranial/: base.py  model_base.py  online_training.py  re_iter.py  records_wrapper.py  service_scripts.py
cranial/examples/: README.md  gensim_lda.ipynb  w2v.ipynb
cranial/models/: gensim_models.py  nlp.py  reporting.py  spacy_tokenizers.py  tokenizers.py
cranial/models/tests/: test_gensim_models.py  test_nlp.py  test_spacy_tokenizers.py  test_tokenizers.py
cranial/models/tests/data/: dandelion_nex.json  just_texts.txt
cranial/scripts/: backfill.py  kafka_process.py  serving.py  train.py
cranial/service/: backfill.py  kafka_process.py  serving.py  train.py
cranial/service/config_examples/: test-config_backfill_or_kafka_process.json  test-config_train.json
cranial/service_scripts/: serving.py
cranial/service_scripts/config_examples/: test-config_serve.json
cranial/tests/: test_cranial.py  test_model_base.py  test_online_learning.py  test_re_iter.py  test_re_iter_multiprocessing.py
project_template/: config.json  model.py  pyproject.toml  requirements.txt
