[tool.poetry]
name = "cranial-modeling"
version = "0.2.0"
description = "Standard model interface, where \"model\" means any stateless or stateful transformation of data & scripts for deploying Models as services."
authors = ["Mikhail Erekhinsky <merekhinsky@tribuneinteractive.com>"]
license = "GPL-3.0+"
repository = "https://github.com/tribune/cranial-modeling"
packages = [
    { include = "cranial" }
]


[tool.poetry.dependencies]
python = ">=3.5"
docopt = "^0.6.2"
pathos = "^0.2.2"
cranial-messaging = "^0.2.0"
cranial-datastore = "^0.2.0"

[tool.poetry.dev-dependencies]
